se agrega color de fondo a la pagina

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autobiografia Camila</title>
+    <style>
+        body {
+            background-color: #FFF0F5;
+        }
+    </style>
 </head>
 <body>
     <h1>Autobiografia María Camila Hernández Mejía</h1>
