--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
         body {
             background-color: #FFF0F5;
         }
+       h1 {
+           text-align: center;
+       }
     </style>
 </head>
 <body>
