se agrega un parrafo en la pagina

--- a/Index.html
+++ b/Index.html
@@ -16,5 +16,10 @@
 </head>
 <body>
     <h1>Autobiografia María Camila Hernández Mejía</h1>
+    <div class="seccion">
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis delectus harum earum expedita soluta, tenetur aperiam, error non iste deserunt, amet impedit et ipsum illo optio facere doloribus. Cumque, adipisci.
+        </p>
+    </div> 
 </body>
 </html>
