--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,9 @@
            text-align: center;
            color: #EE799F;
        }
+       p{
+        box-shadow: 2px 2px 6px rgba(139	71	93);
+       }
     </style>
 </head>
 <body>
