se agrega pie de página

--- a/Index.html
+++ b/Index.html
@@ -24,5 +24,8 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis delectus harum earum expedita soluta, tenetur aperiam, error non iste deserunt, amet impedit et ipsum illo optio facere doloribus. Cumque, adipisci.
         </p>
     </div> 
+    <footer>
+        Con Cariño; María Camila
+    </footer>
 </body>
 </html>
