se agrega parrafo en rama2

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sequi blanditiis fuga reiciendis vel tempora, aspernatur exercitationem? Amet dolorum totam accusantium doloremque? Aliquam eum dolor, in suscipit doloribus quos assumenda!
+    </p>
 </body>
 </html>
