--- a/Index.html
+++ b/Index.html
@@ -1,31 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autobiografia Camila</title>
+    <title>Autobiografía Camila</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #FFF0F5;
+            background-color: #fef6f9;
+            font-family: 'Quicksand', sans-serif;
+            color: #4d3c3c;
+            line-height: 1.8;
+            padding: 40px;
+            max-width: 900px;
+            margin: auto;
         }
-       h1 {
-           text-align: center;
-           color: #EE799F;
-       }
-       p{
-        box-shadow: 2px 2px 6px rgba(139	71	93);
-       }
+
+        h1 {
+            text-align: center;
+            color: #a65c7a;
+            font-size: 36px;
+            font-family: 'Dancing Script', cursive;
+        }
+
+        p {
+            background-color: #fff0f5;
+            border-radius: 15px;
+            padding: 20px;
+            box-shadow: 2px 2px 6px rgba(150, 90, 120, 0.2);
+            font-size: 18px;
+        }
+
+        .seccion {
+            margin-bottom: 30px;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 50px;
+            font-size: 16px;
+            color: #8a6e7f;
+            font-family: 'Dancing Script', cursive;
+        }
     </style>
 </head>
 <body>
-    <h1>Autobiografia María Camila Hernández Mejía</h1>
+    <h1>Autobiografía de María Camila Hernández Mejía</h1>
+
     <div class="seccion">
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis delectus harum earum expedita soluta, tenetur aperiam, error non iste deserunt, amet impedit et ipsum illo optio facere doloribus. Cumque, adipisci.
+            Nací el 30 de noviembre de 1999 en Medellín, ciudad que ha sido mi hogar desde siempre. Aunque he viajado, siempre encuentro algo especial en este lugar, a pesar de los retos que ha traído la gentrificación y el aumento del costo de vida.
         </p>
-    </div> 
+    </div>
+
+    <div class="seccion">
+        <p>
+            Mi infancia fue feliz, aunque bastante estricta por la influencia de una familia cristiana ortodoxa. No tuve acceso a muchas cosas como la música moderna o elegir libremente mis amistades y forma de vestir. Aun así, guardo recuerdos tranquilos y hermosos de esos años.
+        </p>
+    </div>
+
+    <div class="seccion">
+        <p>
+            A los 16 años me gradué del colegio y de una técnica en Ciencia de los Alimentos. Desde entonces, mi vida cambió: sin religión, nuevas experiencias. Estudié Tecnología en Procesamiento y Calidad de Alimentos y trabajé en sitios muy interesantes como la Alcaldía (PAE), colegios y universidades como la UPB, EAFIT, Theodoro Hertz y el Sagrado Corazón.
+        </p>
+    </div>
+
+    <div class="seccion">
+        <p>
+            Experiencias muy enriquecedoras en mi vida que me permitieron tener algunos logros muy significativos para mí, como graduarme como Ingeniera Industrial después de intentar otras carreras, ser independiente desde joven, tener mi moto (que me ha llevado a cada rincón de Colombia), la cual me hizo enamorarme de este tipo de aventuras, y hasta de guía ecoturística terminé (así que esa de caminar por monte y por muchos días me la sé muy bien).
+        </p>
+    </div>
+
+    <div class="seccion">
+        <p>
+            Amo el teatro, la buena música, la cerveza o el vino hablados con mis amigos, los animales, el café, la comida de mi mamá, los juegos de mesa en familia y estar en constante movimiento y aprendizaje (que de eso último he tenido mucho en mi vida). No sé casi nada de ningún tema, pero no he parado de estudiar ningún año de mi vida, porque, sobre todo, amo sorprenderme de lo poco que sé y de lo mucho que hay por saber.
+        </p>
+    </div>
+
+    <div class="seccion">
+        <p>
+            En este momento, administro un club muy coqueto en El Poblado, un trabajo que me tiene gratamente sorprendida, ya que es el que más me ha gustado hasta el momento. Estudio una técnica profesional en programación, con la esperanza de trabajar desde casa (o desde donde quiera), ganar mejor y vivir con más libertad. Sueño con recorrer América en moto, tener un barcito pequeño y sin pretensiones, viviendo en una pequeña finquita en Santa Elena, sin tantas preocupaciones y disfrutando de lo sencillo y hermoso de este extraño suceso de estar vivos.
+        </p>
+    </div>
+
     <footer>
-        Con Cariño; María Camila
+        Con cariño, Maria Camila 🌸
     </footer>
 </body>
 </html>
